# sotoba

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.bash_template  expand_cpp.py  memo.md
cmake/: bin.cmake  common.cmake  dev.cmake
examples/: visualize.cpp
include/sotoba/: cylinder.hpp  exception.hpp  fundamental.hpp  lib.hpp  lidar.hpp  philox.hpp  rectangle.hpp  surface.hpp
src/: lib.cpp  main.cpp
tests/: test_main.cpp  visualize.cpp
